@@ -7,7 +7,9 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***  Improved warning when "do" used as identifier.
 
-**** Fix tracing escaped dotted identifiers.
+**** Fix tracing escaped dotted identifiers, bug107.
+
+**** Fix $display with uppercase %M.
 
 * Verilator 3.713 2009/08/04
 
